--- a/longurl/longurl.env
+++ b/longurl/longurl.env
@@ -1,1 +1,1 @@
-https://github.com/spier/yql-tables/raw/longurl-fix/longurl/longurl.org.xml
+use 'https://github.com/spier/yql-tables/raw/longurl-fix/longurl/longurl.org.xml';
