test for worldbank

--- a/alltables_forked.env
+++ b/alltables_forked.env
@@ -676,7 +676,7 @@ USE 'http://github.com/spier/yql-tables/raw/master/socialgraph/socialgraph.other
 USE 'http://github.com/spier/yql-tables/raw/master/socialgraph/socialgraph.trustsme.xml' AS socialgraph.trustsme;
 USE 'http://github.com/spier/yql-tables/raw/master/socialinfluence/socialinfluence.xml' AS socialinfluence;
 USE 'http://github.com/spier/yql-tables/raw/master/socialmention/socialmention.search.xml' AS socialmention.search;
-USE 'http://github.com/spier/yql-tables/raw/socrata/socrata/socrata.views.xml' AS socrata.views;
+USE 'http://github.com/spier/yql-tables/raw/master/socrata/socrata.views.xml' AS socrata.views;
 USE 'http://github.com/spier/yql-tables/raw/master/soundcloud/soundcloud.group_contributions.xml' AS soundcloud.group_contributions;
 USE 'http://github.com/spier/yql-tables/raw/master/soundcloud/soundcloud.group_contributors.xml' AS soundcloud.group_contributors;
 USE 'http://github.com/spier/yql-tables/raw/master/soundcloud/soundcloud.group_info.xml' AS soundcloud.group_info;
@@ -892,6 +892,8 @@ USE 'http://github.com/spier/yql-tables/raw/master/wikileaks/wikileaks.terms.xml
 USE 'http://github.com/spier/yql-tables/raw/master/wordpress/wordpress.post.xml' AS wordpress.post;
 USE 'http://github.com/spier/yql-tables/raw/master/worldbank/worldbank.countries.xml' AS worldbank.countries;
 USE 'http://github.com/spier/yql-tables/raw/master/worldbank/worldbank.data.xml' AS worldbank.data;
+USE 'http://github.com/spier/yql-tables/raw/socrata/worldbank/worldbank.finance.views.details.xml' AS worldbank.finance.views.details;
+USE 'http://github.com/spier/yql-tables/raw/socrata/worldbank/worldbank.finance.views.xml' AS worldbank.finance.views;
 USE 'http://github.com/spier/yql-tables/raw/master/worldbank/worldbank.incomelevels.xml' AS worldbank.incomelevels;
 USE 'http://github.com/spier/yql-tables/raw/master/worldbank/worldbank.indicators.xml' AS worldbank.indicators;
 USE 'http://github.com/spier/yql-tables/raw/master/worldbank/worldbank.lendingtypes.xml' AS worldbank.lendingtypes;
