--- a/alltables_forked.env
+++ b/alltables_forked.env
@@ -676,6 +676,7 @@ USE 'https://raw.github.com/spier/yql-tables/socrata/socialgraph/socialgraph.oth
 USE 'https://raw.github.com/spier/yql-tables/socrata/socialgraph/socialgraph.trustsme.xml' AS socialgraph.trustsme;
 USE 'https://raw.github.com/spier/yql-tables/socrata/socialinfluence/socialinfluence.xml' AS socialinfluence;
 USE 'https://raw.github.com/spier/yql-tables/socrata/socialmention/socialmention.search.xml' AS socialmention.search;
+USE 'https://raw.github.com/spier/yql-tables/socrata/socrata/socrata.docs.xml' AS socrata.docs;
 USE 'https://raw.github.com/spier/yql-tables/socrata/socrata/socrata.views.xml' AS socrata.views;
 USE 'https://raw.github.com/spier/yql-tables/socrata/soundcloud/soundcloud.group_contributions.xml' AS soundcloud.group_contributions;
 USE 'https://raw.github.com/spier/yql-tables/socrata/soundcloud/soundcloud.group_contributors.xml' AS soundcloud.group_contributors;
@@ -890,6 +891,7 @@ USE 'https://raw.github.com/spier/yql-tables/socrata/whitepages/whitepages.searc
 USE 'https://raw.github.com/spier/yql-tables/socrata/wikileaks/wikileaks.origin.xml' AS wikileaks.origin;
 USE 'https://raw.github.com/spier/yql-tables/socrata/wikileaks/wikileaks.terms.xml' AS wikileaks.terms;
 USE 'https://raw.github.com/spier/yql-tables/socrata/wordpress/wordpress.post.xml' AS wordpress.post;
+USE 'https://raw.github.com/spier/yql-tables/socrata/worldbank/wb_test.xml' AS wb_test;
 USE 'https://raw.github.com/spier/yql-tables/socrata/worldbank/worldbank.countries.xml' AS worldbank.countries;
 USE 'https://raw.github.com/spier/yql-tables/socrata/worldbank/worldbank.data.xml' AS worldbank.data;
 USE 'https://raw.github.com/spier/yql-tables/socrata/worldbank/worldbank.finance.views.details.xml' AS worldbank.finance.views.details;
