--- a/alltables_forked.env
+++ b/alltables_forked.env
@@ -891,6 +891,8 @@ USE 'https://raw.github.com/spier/yql-tables/socrata/whitepages/whitepages.searc
 USE 'https://raw.github.com/spier/yql-tables/socrata/wikileaks/wikileaks.origin.xml' AS wikileaks.origin;
 USE 'https://raw.github.com/spier/yql-tables/socrata/wikileaks/wikileaks.terms.xml' AS wikileaks.terms;
 USE 'https://raw.github.com/spier/yql-tables/socrata/wordpress/wordpress.post.xml' AS wordpress.post;
+USE 'https://raw.github.com/spier/yql-tables/socrata/worldbank/socrata_test.xml' AS socrata_test;
+USE 'https://raw.github.com/spier/yql-tables/socrata/worldbank/wb.finance.columns.xml' AS wb.finance.columns;
 USE 'https://raw.github.com/spier/yql-tables/socrata/worldbank/wb_test.xml' AS wb_test;
 USE 'https://raw.github.com/spier/yql-tables/socrata/worldbank/worldbank.countries.xml' AS worldbank.countries;
 USE 'https://raw.github.com/spier/yql-tables/socrata/worldbank/worldbank.data.xml' AS worldbank.data;
