renaming from .txt to .xml

--- a/alltables_forked.env
+++ b/alltables_forked.env
@@ -822,6 +822,7 @@ USE 'https://raw.github.com/spier/yql-tables/usagov/ukpostcode/ukpostcode.latlng
 USE 'https://raw.github.com/spier/yql-tables/usagov/ukpostcode/ukpostcode.postcode.xml' AS ukpostcode.postcode;
 USE 'https://raw.github.com/spier/yql-tables/usagov/urbanesia/urbanesia.search.xml' AS urbanesia.search;
 USE 'https://raw.github.com/spier/yql-tables/usagov/url/status.xml' AS status;
+USE 'https://raw.github.com/spier/yql-tables/usagov/usagov/1usagov.xml' AS 1usagov;
 USE 'https://raw.github.com/spier/yql-tables/usagov/usgs/usgs.earthquakes.xml' AS usgs.earthquakes;
 USE 'https://raw.github.com/spier/yql-tables/usagov/usgs/usgs.waterquality.codes.xml' AS usgs.waterquality.codes;
 USE 'https://raw.github.com/spier/yql-tables/usagov/usgs/usgs.waterquality.xml' AS usgs.waterquality;
