--- a/alltables_forked.env
+++ b/alltables_forked.env
@@ -22,7 +22,7 @@ USE 'https://raw.github.com/spier/yql-tables/berlin_open_data/batlas/batlas.dist
 USE 'https://raw.github.com/spier/yql-tables/berlin_open_data/batlas/batlas.intersection.xml' AS batlas.intersection;
 USE 'https://raw.github.com/spier/yql-tables/berlin_open_data/batlas/batlas.nearest.xml' AS batlas.nearest;
 USE 'https://raw.github.com/spier/yql-tables/berlin_open_data/bbc/bbc.goodfood.seasonal.xml' AS bbc.goodfood.seasonal;
-USE 'https://raw.github.com/spier/yql-tables/berlin_open_data/berlin_open_data/simplesearch.finance.xml' AS simplesearch.finance;
+USE 'https://raw.github.com/spier/yql-tables/berlin_open_data/berlin_open_data/bod.simplesearch.finance.xml' AS bod.simplesearch.finance;
 USE 'https://raw.github.com/spier/yql-tables/berlin_open_data/bible/bible.bible.xml' AS bible.bible;
 USE 'https://raw.github.com/spier/yql-tables/berlin_open_data/bible/bible.books.xml' AS bible.books;
 USE 'https://raw.github.com/spier/yql-tables/berlin_open_data/bible/bible.editions.xml' AS bible.editions;
