--- a/alltables_forked.env
+++ b/alltables_forked.env
@@ -23,7 +23,7 @@ USE 'https://raw.github.com/spier/yql-tables/berlin_open_data/batlas/batlas.inte
 USE 'https://raw.github.com/spier/yql-tables/berlin_open_data/batlas/batlas.nearest.xml' AS batlas.nearest;
 USE 'https://raw.github.com/spier/yql-tables/berlin_open_data/bbc/bbc.goodfood.seasonal.xml' AS bbc.goodfood.seasonal;
 USE 'https://raw.github.com/spier/yql-tables/berlin_open_data/berlin_open_data/bod.altglascontainer.xml' AS bod.altglascontainer;
-USE 'https://raw.github.com/spier/yql-tables/berlin_open_data/berlin_open_data/bod.simplesearch.finance.xml' AS bod.simplesearch.finance;
+USE 'https://raw.github.com/spier/yql-tables/berlin_open_data/berlin_open_data/bod.zuwendungen.xml' AS bod.zuwendungen;
 USE 'https://raw.github.com/spier/yql-tables/berlin_open_data/bible/bible.bible.xml' AS bible.bible;
 USE 'https://raw.github.com/spier/yql-tables/berlin_open_data/bible/bible.books.xml' AS bible.books;
 USE 'https://raw.github.com/spier/yql-tables/berlin_open_data/bible/bible.editions.xml' AS bible.editions;
