new tables from merge with wefeelfine

--- a/alltables_forked.env
+++ b/alltables_forked.env
@@ -903,6 +903,8 @@ USE 'https://raw.github.com/spier/yql-tables/master/weather/weather.temperatures
 USE 'https://raw.github.com/spier/yql-tables/master/weather/weather.woeid.xml' AS weather.woeid;
 USE 'https://raw.github.com/spier/yql-tables/master/webdav/get.xml' AS get;
 USE 'https://raw.github.com/spier/yql-tables/master/webdav/propfind.xml' AS propfind;
+USE 'https://raw.github.com/spier/yql-tables/master/wefeelfine/wefeelfine.feelings.xml' AS wefeelfine.feelings;
+USE 'https://raw.github.com/spier/yql-tables/master/wefeelfine/wefeelfine.imageurl.xml' AS wefeelfine.imageurl;
 USE 'https://raw.github.com/spier/yql-tables/master/wesabe/wesabe.tags.xml' AS wesabe.tags;
 USE 'https://raw.github.com/spier/yql-tables/master/whitepages/whitepages.reverse.xml' AS whitepages.reverse;
 USE 'https://raw.github.com/spier/yql-tables/master/whitepages/whitepages.search.xml' AS whitepages.search;
