trying bounces.count table

--- a/alltables_forked.env
+++ b/alltables_forked.env
@@ -142,6 +142,7 @@ USE 'https://raw.github.com/spier/yql-tables/dyn/dopplr/dopplr.traveller.info.xm
 USE 'https://raw.github.com/spier/yql-tables/dyn/dopplr/dopplr.traveller.travelling.xml' AS dopplr.traveller.travelling;
 USE 'https://raw.github.com/spier/yql-tables/dyn/dopplr/dopplr.trips.info.xml' AS dopplr.trips.info;
 USE 'https://raw.github.com/spier/yql-tables/dyn/dostopsi/dostopsi.prehrana.xml' AS dostopsi.prehrana;
+USE 'https://raw.github.com/spier/yql-tables/dyn/dyn/dynect.bounces.count.xml' AS dynect.bounces.count;
 USE 'https://raw.github.com/spier/yql-tables/dyn/dyn/dynect.bounces.xml' AS dynect.bounces;
 USE 'https://raw.github.com/spier/yql-tables/dyn/edu/wsu/edu.wsu.schedules.classbysln.xml' AS edu.wsu.schedules.classbysln;
 USE 'https://raw.github.com/spier/yql-tables/dyn/edu/wsu/edu.wsu.schedules.classes.xml' AS edu.wsu.schedules.classes;
