Adding new .env file for newly merged in tables.

--- a/alltables_forked.env
+++ b/alltables_forked.env
@@ -11,6 +11,7 @@ USE 'https://raw.github.com/spier/yql-tables/master/amee/amee.data.itemvalue.xml
 USE 'https://raw.github.com/spier/yql-tables/master/ap/ap.breakingnews.categories.xml' AS ap.breakingnews.categories;
 USE 'https://raw.github.com/spier/yql-tables/master/ap/ap.breakingnews.content.xml' AS ap.breakingnews.content;
 USE 'https://raw.github.com/spier/yql-tables/master/ap/ap.search.xml' AS ap.search;
+USE 'https://raw.github.com/spier/yql-tables/master/apigee/apigee.consoles.xml' AS apigee.consoles;
 USE 'https://raw.github.com/spier/yql-tables/master/apple/apple.itunes.xml' AS apple.itunes;
 USE 'https://raw.github.com/spier/yql-tables/master/arxiv/arxiv.search.xml' AS arxiv.search;
 USE 'https://raw.github.com/spier/yql-tables/master/auth/auth.basic.xml' AS auth.basic;
@@ -142,6 +143,8 @@ USE 'https://raw.github.com/spier/yql-tables/master/dopplr/dopplr.traveller.info
 USE 'https://raw.github.com/spier/yql-tables/master/dopplr/dopplr.traveller.travelling.xml' AS dopplr.traveller.travelling;
 USE 'https://raw.github.com/spier/yql-tables/master/dopplr/dopplr.trips.info.xml' AS dopplr.trips.info;
 USE 'https://raw.github.com/spier/yql-tables/master/dostopsi/dostopsi.prehrana.xml' AS dostopsi.prehrana;
+USE 'https://raw.github.com/spier/yql-tables/master/ecb/eurofx.daily.xml' AS eurofx.daily;
+USE 'https://raw.github.com/spier/yql-tables/master/ecb/eurofx.xml' AS eurofx;
 USE 'https://raw.github.com/spier/yql-tables/master/edu/wsu/edu.wsu.schedules.classbysln.xml' AS edu.wsu.schedules.classbysln;
 USE 'https://raw.github.com/spier/yql-tables/master/edu/wsu/edu.wsu.schedules.classes.xml' AS edu.wsu.schedules.classes;
 USE 'https://raw.github.com/spier/yql-tables/master/embedly/embedly.xml' AS embedly;
@@ -395,7 +398,12 @@ USE 'https://raw.github.com/spier/yql-tables/master/google/google.picasa.photo.t
 USE 'https://raw.github.com/spier/yql-tables/master/google/google.picasa.user.contacts.xml' AS google.picasa.user.contacts;
 USE 'https://raw.github.com/spier/yql-tables/master/google/google.picasa.user.info.xml' AS google.picasa.user.info;
 USE 'https://raw.github.com/spier/yql-tables/master/google/google.plus.activities.list.xml' AS google.plus.activities.list;
+USE 'https://raw.github.com/spier/yql-tables/master/google/google.plus.activities.search.xml' AS google.plus.activities.search;
 USE 'https://raw.github.com/spier/yql-tables/master/google/google.plus.activities.xml' AS google.plus.activities;
+USE 'https://raw.github.com/spier/yql-tables/master/google/google.plus.comments.list.xml' AS google.plus.comments.list;
+USE 'https://raw.github.com/spier/yql-tables/master/google/google.plus.comments.xml' AS google.plus.comments;
+USE 'https://raw.github.com/spier/yql-tables/master/google/google.plus.people.listByActivity.xml' AS google.plus.people.listByActivity;
+USE 'https://raw.github.com/spier/yql-tables/master/google/google.plus.people.search.xml' AS google.plus.people.search;
 USE 'https://raw.github.com/spier/yql-tables/master/google/google.plus.people.xml' AS google.plus.people;
 USE 'https://raw.github.com/spier/yql-tables/master/google/google.search.xml' AS google.search;
 USE 'https://raw.github.com/spier/yql-tables/master/google/google.searchappliance.search.xml' AS google.searchappliance.search;
@@ -423,8 +431,9 @@ USE 'https://raw.github.com/spier/yql-tables/master/hatena/hatena.bookmark.atom.
 USE 'https://raw.github.com/spier/yql-tables/master/hatena/hatena.bookmark.getasincount.xml' AS hatena.bookmark.getasincount;
 USE 'https://raw.github.com/spier/yql-tables/master/hatena/hatena.bookmark.getcount.xml' AS hatena.bookmark.getcount;
 USE 'https://raw.github.com/spier/yql-tables/master/hatena/hatena.bookmark.gettotalcount.xml' AS hatena.bookmark.gettotalcount;
-USE 'https://raw.github.com/spier/yql-tables/master/HIA/HIA.extract.xml' AS HIA.extract;
-USE 'https://raw.github.com/spier/yql-tables/master/HIA/HIA.search.xml' AS HIA.search;
+USE 'https://raw.github.com/spier/yql-tables/master/huffduffer/huffduffer.items.xml' AS huffduffer.items;
+USE 'https://raw.github.com/spier/yql-tables/master/ia/ia.extract.xml' AS ia.extract;
+USE 'https://raw.github.com/spier/yql-tables/master/ia/ia.search.xml' AS ia.search;
 USE 'https://raw.github.com/spier/yql-tables/master/ign/ign.object.xml' AS ign.object;
 USE 'https://raw.github.com/spier/yql-tables/master/infochimps/infochimps.influence.xml' AS infochimps.influence;
 USE 'https://raw.github.com/spier/yql-tables/master/infochimps/infochimps.trstrank.xml' AS infochimps.trstrank;
@@ -532,6 +541,7 @@ USE 'https://raw.github.com/spier/yql-tables/master/limewirestore/limewirestore.
 USE 'https://raw.github.com/spier/yql-tables/master/livedoor/livedoor.weather.forecast.xml' AS livedoor.weather.forecast;
 USE 'https://raw.github.com/spier/yql-tables/master/longurl/longurl.org.xml' AS longurl.org;
 USE 'https://raw.github.com/spier/yql-tables/master/longurl/longurl.services.xml' AS longurl.services;
+USE 'https://raw.github.com/spier/yql-tables/master/longurl/longurl.yql.xml' AS longurl.yql;
 USE 'https://raw.github.com/spier/yql-tables/master/md5/filemd5.hash.xml' AS filemd5.hash;
 USE 'https://raw.github.com/spier/yql-tables/master/mediawikiapi/mediawikiapi.namespacealiases.xml' AS mediawikiapi.namespacealiases;
 USE 'https://raw.github.com/spier/yql-tables/master/mediawikiapi/mediawikiapi.namespaces.xml' AS mediawikiapi.namespaces;
@@ -640,6 +650,7 @@ USE 'https://raw.github.com/spier/yql-tables/master/opensocial/opensocial.people
 USE 'https://raw.github.com/spier/yql-tables/master/paypal/paypal.transaction.details.xml' AS paypal.transaction.details;
 USE 'https://raw.github.com/spier/yql-tables/master/paypal/paypal.transactions.xml' AS paypal.transactions;
 USE 'https://raw.github.com/spier/yql-tables/master/peerindex/peerindex.profile.xml' AS peerindex.profile;
+USE 'https://raw.github.com/spier/yql-tables/master/peerindex/peerindex.show.xml' AS peerindex.show;
 USE 'https://raw.github.com/spier/yql-tables/master/pikchur/pikchur.feed.xml' AS pikchur.feed;
 USE 'https://raw.github.com/spier/yql-tables/master/pivotal/pivotal.xml' AS pivotal;
 USE 'https://raw.github.com/spier/yql-tables/master/plos/plos.alm.xml' AS plos.alm;
@@ -649,9 +660,18 @@ USE 'https://raw.github.com/spier/yql-tables/master/powerhousemuseum/phm.item.xm
 USE 'https://raw.github.com/spier/yql-tables/master/powerhousemuseum/phm.multimedia.xml' AS phm.multimedia;
 USE 'https://raw.github.com/spier/yql-tables/master/powerhousemuseum/phm.subject.xml' AS phm.subject;
 USE 'https://raw.github.com/spier/yql-tables/master/powerhousemuseum/phm.theme.xml' AS phm.theme;
+USE 'https://raw.github.com/spier/yql-tables/master/presseportal/presseportal.info.xml' AS presseportal.info;
+USE 'https://raw.github.com/spier/yql-tables/master/presseportal/presseportal.ir.xml' AS presseportal.ir;
+USE 'https://raw.github.com/spier/yql-tables/master/presseportal/presseportal.publicservice.xml' AS presseportal.publicservice;
+USE 'https://raw.github.com/spier/yql-tables/master/presseportal/presseportal.search.xml' AS presseportal.search;
+USE 'https://raw.github.com/spier/yql-tables/master/presseportal/presseportal.stories.xml' AS presseportal.stories;
 USE 'https://raw.github.com/spier/yql-tables/master/prlog/prlog.categories.xml' AS prlog.categories;
 USE 'https://raw.github.com/spier/yql-tables/master/prlog/prlog.company.releases.xml' AS prlog.company.releases;
 USE 'https://raw.github.com/spier/yql-tables/master/prlog/prlog.releases.xml' AS prlog.releases;
+USE 'https://raw.github.com/spier/yql-tables/master/programmableweb/pw.apis.xml' AS pw.apis;
+USE 'https://raw.github.com/spier/yql-tables/master/programmableweb/pw.mashups.xml' AS pw.mashups;
+USE 'https://raw.github.com/spier/yql-tables/master/programmableweb/pw.members.xml' AS pw.members;
+USE 'https://raw.github.com/spier/yql-tables/master/programmableweb/pw.widgets.xml' AS pw.widgets;
 USE 'https://raw.github.com/spier/yql-tables/master/pubsubhubbub/pubsubhubbub.publisher.xml' AS pubsubhubbub.publisher;
 USE 'https://raw.github.com/spier/yql-tables/master/quickbase/intuit.quickbase.info.xml' AS intuit.quickbase.info;
 USE 'https://raw.github.com/spier/yql-tables/master/quickbase/intuit.quickbase.xml' AS intuit.quickbase;
@@ -696,6 +716,13 @@ USE 'https://raw.github.com/spier/yql-tables/master/socialgraph/socialgraph.othe
 USE 'https://raw.github.com/spier/yql-tables/master/socialgraph/socialgraph.trustsme.xml' AS socialgraph.trustsme;
 USE 'https://raw.github.com/spier/yql-tables/master/socialinfluence/socialinfluence.xml' AS socialinfluence;
 USE 'https://raw.github.com/spier/yql-tables/master/socialmention/socialmention.search.xml' AS socialmention.search;
+USE 'https://raw.github.com/spier/yql-tables/master/songkick/songkick.calendar.artist.xml' AS songkick.calendar.artist;
+USE 'https://raw.github.com/spier/yql-tables/master/songkick/songkick.calendar.metro.xml' AS songkick.calendar.metro;
+USE 'https://raw.github.com/spier/yql-tables/master/songkick/songkick.calendar.venue.xml' AS songkick.calendar.venue;
+USE 'https://raw.github.com/spier/yql-tables/master/songkick/songkick.search.artist.xml' AS songkick.search.artist;
+USE 'https://raw.github.com/spier/yql-tables/master/songkick/songkick.search.event.xml' AS songkick.search.event;
+USE 'https://raw.github.com/spier/yql-tables/master/songkick/songkick.search.location.xml' AS songkick.search.location;
+USE 'https://raw.github.com/spier/yql-tables/master/songkick/songkick.search.venue.xml' AS songkick.search.venue;
 USE 'https://raw.github.com/spier/yql-tables/master/soundcloud/soundcloud.group_contributions.xml' AS soundcloud.group_contributions;
 USE 'https://raw.github.com/spier/yql-tables/master/soundcloud/soundcloud.group_contributors.xml' AS soundcloud.group_contributors;
 USE 'https://raw.github.com/spier/yql-tables/master/soundcloud/soundcloud.group_info.xml' AS soundcloud.group_info;
@@ -742,6 +769,7 @@ USE 'https://raw.github.com/spier/yql-tables/master/sunlight/sunlight.legislator
 USE 'https://raw.github.com/spier/yql-tables/master/sunlight/sunlight.lobbyists.getFiling.xml' AS sunlight.lobbyists.getFiling;
 USE 'https://raw.github.com/spier/yql-tables/master/sunlight/sunlight.lobbyists.getFilingList.xml' AS sunlight.lobbyists.getFilingList;
 USE 'https://raw.github.com/spier/yql-tables/master/sunlight/sunlight.lobbyists.search.xml' AS sunlight.lobbyists.search;
+USE 'https://raw.github.com/spier/yql-tables/master/sux/SUX.xml' AS SUX;
 USE 'https://raw.github.com/spier/yql-tables/master/tarpipe/tarpipe.process_1_0.xml' AS tarpipe.process_1_0;
 USE 'https://raw.github.com/spier/yql-tables/master/tarpipe/tarpipe.transaction.xml' AS tarpipe.transaction;
 USE 'https://raw.github.com/spier/yql-tables/master/tarpipe/tarpipe.workflow.xml' AS tarpipe.workflow;
@@ -781,6 +809,7 @@ USE 'https://raw.github.com/spier/yql-tables/master/topsy/topsy.trackbacks.xml' 
 USE 'https://raw.github.com/spier/yql-tables/master/topsy/topsy.trending.xml' AS topsy.trending;
 USE 'https://raw.github.com/spier/yql-tables/master/topsy/topsy.urlinfo.xml' AS topsy.urlinfo;
 USE 'https://raw.github.com/spier/yql-tables/master/trygger/JSinterpreter.xml' AS JSinterpreter;
+USE 'https://raw.github.com/spier/yql-tables/master/trygger/RSS-izator.xml' AS RSS-izator;
 USE 'https://raw.github.com/spier/yql-tables/master/trygger/YQLfeeder.xml' AS YQLfeeder;
 USE 'https://raw.github.com/spier/yql-tables/master/tumblr/tumblr.posts.xml' AS tumblr.posts;
 USE 'https://raw.github.com/spier/yql-tables/master/tumblr/tumblr.tumblelog.xml' AS tumblr.tumblelog;
@@ -1032,6 +1061,11 @@ USE 'https://raw.github.com/spier/yql-tables/master/yahoojp/shopping/yahoojp.sho
 USE 'https://raw.github.com/spier/yql-tables/master/yahoojp/shopping/yahoojp.shopping.urlitemmatchlookup.xml' AS yahoojp.shopping.urlitemmatchlookup;
 USE 'https://raw.github.com/spier/yql-tables/master/yahoojp/shopping/yahoojp.shopping.urlitemmatchremove.xml' AS yahoojp.shopping.urlitemmatchremove;
 USE 'https://raw.github.com/spier/yql-tables/master/yahoojp/shopping/yahoojp.shopping.urlitemmatchsearch.xml' AS yahoojp.shopping.urlitemmatchsearch;
+USE 'https://raw.github.com/spier/yql-tables/master/yahoovoices/yahoovoices.fans.xml' AS yahoovoices.fans;
+USE 'https://raw.github.com/spier/yql-tables/master/yahoovoices/yahoovoices.favorites.xml' AS yahoovoices.favorites;
+USE 'https://raw.github.com/spier/yql-tables/master/yahoovoices/yahoovoices.featuredarticles.xml' AS yahoovoices.featuredarticles;
+USE 'https://raw.github.com/spier/yql-tables/master/yahoovoices/yahoovoices.recentarticles.xml' AS yahoovoices.recentarticles;
+USE 'https://raw.github.com/spier/yql-tables/master/yahoovoices/yahoovoices.recentcomments.xml' AS yahoovoices.recentcomments;
 USE 'https://raw.github.com/spier/yql-tables/master/yelp/yelp.review.search.xml' AS yelp.review.search;
 USE 'https://raw.github.com/spier/yql-tables/master/ygroups/ygroups.HGS.xml' AS ygroups.HGS;
 USE 'https://raw.github.com/spier/yql-tables/master/ygroups/ygroups.HGSP.xml' AS ygroups.HGSP;
@@ -1046,6 +1080,7 @@ USE 'https://raw.github.com/spier/yql-tables/master/ygroups/ygroups.HYSIMA.xml' 
 USE 'https://raw.github.com/spier/yql-tables/master/ygroups/ygroups.HYSUMA.xml' AS ygroups.HYSUMA;
 USE 'https://raw.github.com/spier/yql-tables/master/ygroups/ygroups.HYTMA.xml' AS ygroups.HYTMA;
 USE 'https://raw.github.com/spier/yql-tables/master/youtube/youtube.search.xml' AS youtube.search;
+USE 'https://raw.github.com/spier/yql-tables/master/youtube/youtube.user.videos.xml' AS youtube.user.videos;
 USE 'https://raw.github.com/spier/yql-tables/master/youtube/youtube.user.xml' AS youtube.user;
 USE 'https://raw.github.com/spier/yql-tables/master/youtube/youtube.video.comments.xml' AS youtube.video.comments;
 USE 'https://raw.github.com/spier/yql-tables/master/youtube/youtube.video.xml' AS youtube.video;
@@ -1059,3 +1094,6 @@ USE 'https://raw.github.com/spier/yql-tables/master/yui/yui.gallery.popular.xml'
 USE 'https://raw.github.com/spier/yql-tables/master/yui/yui.gallery.random.xml' AS yui.gallery.random;
 USE 'https://raw.github.com/spier/yql-tables/master/yui/yui.gallery.user.xml' AS yui.gallery.user;
 USE 'https://raw.github.com/spier/yql-tables/master/zillow/zillow.search.xml' AS zillow.search;
+USE 'https://raw.github.com/spier/yql-tables/master/zugmonitor/zugmonitor.cities.xml' AS zugmonitor.cities;
+USE 'https://raw.github.com/spier/yql-tables/master/zugmonitor/zugmonitor.stations.xml' AS zugmonitor.stations;
+USE 'https://raw.github.com/spier/yql-tables/master/zugmonitor/zugmonitor.trains.xml' AS zugmonitor.trains;
