adding departments call. trying combined 'meta' table

--- a/alltables_forked.env
+++ b/alltables_forked.env
@@ -926,7 +926,9 @@ USE 'https://raw.github.com/spier/yql-tables/zeit/yui/yui.gallery.random.xml' AS
 USE 'https://raw.github.com/spier/yql-tables/zeit/yui/yui.gallery.user.xml' AS yui.gallery.user;
 USE 'https://raw.github.com/spier/yql-tables/zeit/zeit/zeit.author.xml' AS zeit.author;
 USE 'https://raw.github.com/spier/yql-tables/zeit/zeit/zeit.content.xml' AS zeit.content;
+USE 'https://raw.github.com/spier/yql-tables/zeit/zeit/zeit.department.xml' AS zeit.department;
 USE 'https://raw.github.com/spier/yql-tables/zeit/zeit/zeit.keyword.xml' AS zeit.keyword;
+USE 'https://raw.github.com/spier/yql-tables/zeit/zeit/zeit.meta.xml' AS zeit.meta;
 USE 'https://raw.github.com/spier/yql-tables/zeit/zeit/zeit.product.xml' AS zeit.product;
 USE 'https://raw.github.com/spier/yql-tables/zeit/zeit/zeit.series.xml' AS zeit.series;
 USE 'https://raw.github.com/spier/yql-tables/zeit/zillow/zillow.search.xml' AS zillow.search;
