--- a/alltables_forked.env
+++ b/alltables_forked.env
@@ -925,6 +925,7 @@ USE 'https://raw.github.com/spier/yql-tables/zeit/yui/yui.gallery.popular.xml' A
 USE 'https://raw.github.com/spier/yql-tables/zeit/yui/yui.gallery.random.xml' AS yui.gallery.random;
 USE 'https://raw.github.com/spier/yql-tables/zeit/yui/yui.gallery.user.xml' AS yui.gallery.user;
 USE 'https://raw.github.com/spier/yql-tables/zeit/zeit/zeit.author.xml' AS zeit.author;
+USE 'https://raw.github.com/spier/yql-tables/zeit/zeit/zeit.client.xml' AS zeit.client;
 USE 'https://raw.github.com/spier/yql-tables/zeit/zeit/zeit.content.xml' AS zeit.content;
 USE 'https://raw.github.com/spier/yql-tables/zeit/zeit/zeit.department.xml' AS zeit.department;
 USE 'https://raw.github.com/spier/yql-tables/zeit/zeit/zeit.keyword.xml' AS zeit.keyword;
